--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
+
 {
 	"browser_action": {
 		"default_icon": "icon.png",
+		"default_popup": "src/popup.html"
 	},
 	"content_scripts": [
 		{
-			"js": ["src/jquery.min.js", "src/gpa.js"],
+			"js": ["src/gpa.js"],
 			"matches": ["http://powerschool.isb.ac.th/guardian/*", "https://powerschool.isb.ac.th/guardian/*"],
 			"run_at": "document_end"
 		}
@@ -19,5 +21,5 @@
 	"name": "ISB PowerSchool Enhancer",
 	"permissions": ["https://powerschool.isb.ac.th/*", "http://powerschool.isb.ac.th/*"],
 	"short_name": "ISBPWRSKLENH",
-	"version": "1.00"
+	"version": "1.0.0"
 }
