--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
 	"browser_action": {
 		"default_icon": "icon.png",
@@ -6,7 +5,7 @@
 	},
 	"content_scripts": [
 		{
-			"js": ["src/gpa.js"],
+			"js": ["src/jquery.min.js", "src/gpa.js", "src/schedule/schedule.js"],
 			"matches": ["http://powerschool.isb.ac.th/guardian/*", "https://powerschool.isb.ac.th/guardian/*"],
 			"run_at": "document_end"
 		}
@@ -21,5 +20,6 @@
 	"name": "ISB PowerSchool Enhancer",
 	"permissions": ["https://powerschool.isb.ac.th/*", "http://powerschool.isb.ac.th/*"],
 	"short_name": "ISBPWRSKLENH",
-	"version": "1.0.0"
+	"version": "1.0.0",
+	"web_accessible_resources": ["src/schedule/schedule.css"]
 }
