--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	},
 	"content_scripts": [
 		{
-			"js": ["src/jquery.min.js", "src/gpa.js", "src/notices.js", "src/schedule/schedule.js", "src/ban.js", "src/percent.js"],
+			"js": ["src/jquery.min.js", "src/gpa.js", "src/notices.js", "src/schedule/schedule.js", "src/ban.js"],
 			"matches": ["http://powerschool.isb.ac.th/guardian/*", "https://powerschool.isb.ac.th/guardian/*"],
 			"run_at": "document_end"
 		}
@@ -20,6 +20,6 @@
 	"name": "ISB PowerSchool Enhancer",
 	"permissions": ["https://*/*", "http://*/*"],
 	"short_name": "ISBPWRSKLENH",
-	"version": "1.3.11",
+	"version": "1.4.0",
 	"web_accessible_resources": ["src/schedule/schedule.css"]
 }
